Fix layout bug with new contribution edit button
* when displaying a session
* when displaying a subcontribution

--- a/indico/htdocs/css/events/common.css
+++ b/indico/htdocs/css/events/common.css
@@ -82,7 +82,7 @@ ul.meetingTimetable > li {
 
 
 ul.meetingSubTimetable {
-    margin: 0 0 0 0;
+    margin: 0.7em 0 0 0;
     list-style-type: none;
     padding: 0px;
 }
@@ -143,7 +143,7 @@ ul.subEventLevelSCList {
 }
 
 ul.subEventLevelSCList li {
-    padding: 0;
+    padding: 0 0 8px 0;
     margin: 5px 0;
     list-style-type: none;
     border-bottom: 1px dotted #AAA;
@@ -565,7 +565,7 @@ li.meetingSession, li.meetingContrib, li.breakListItem {
     margin: 0 0 0 0;
 }
 
-li.meetingContrib > a.i-button {
+li.meetingContrib a.meeting-timetable-item-edit {
     margin-top: 0;
 }
 
